<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LayoutPagament"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageProdPagament"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nomNoModiPagament"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_del_producte" />

                <TextView
                    android:id="@+id/nomProductePagament"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alergiesNoModiPagament"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alergies" />

                <TextView
                    android:id="@+id/alergiesProdPagament"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preuNoModiPagament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preu_del_producte" />

            <TextView
                android:id="@+id/preuProdPagament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </LinearLayout>